--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,11 @@
 
   @media screen and (max-width: 765px) {}
     body {
-        background-color: red;
+        background-color: white;
     }
 
     main {
-        background-color: red;
-        
-    }
-    .box {
-        width: 100%;
+        background-color: white;  
     }
 
 @media screen and (min-width: 766px) {
@@ -17,15 +13,8 @@
 
     background-color: white;
     
-        
 }
-    body{
-        background-color: black;
-        color:aqua;
-    }
-    .box{
-        width: 30%;
-    }
+
 }
 
 
