--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -4,6 +4,10 @@
             <h2 class="card-title" style="font-size: 1.5rem">Sign-Up</h2>
         </div>
         <form>
+             <div class="mb-3">
+                <label for="usernameInput" class="form-label">Username</label>
+                <input type="username" class="form-control" id="usernameInput">
+            </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -17,4 +21,4 @@
     </div>
 </div>
 
-<script src="../public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
