--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,10 +7,10 @@
 <div class="p-2">
     <h4 class="ms-4 mt-3">Recipes</h4>
     <div class="row">
-        {{#each recipePost as |recipePost|}}
+        {{#each recipes as |recipe|}}
         <div class="col-md-4">
             <div class="d-flex justify-content-center">
-                {{> recipeHolder}}
+                {{> recipeCard}}
             </div>
         </div>
         {{/each}}
