--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,8 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="https://www.logolynx.com/images/logolynx/s_4c/4cf57385863420e9a335a5f0ad7bb52c.png" alt="Food4Thought Logo">
+                <img src="https://www.logolynx.com/images/logolynx/s_4c/4cf57385863420e9a335a5f0ad7bb52c.png"
+                    alt="Food4Thought Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,6 +58,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-3NlDrX4KkbV5tlxlpArWJw2Mxp9FG2j4ELCCjX0u5mz9fD9cPFPlkNmxyQIXZjlT"
         crossorigin="anonymous"></script>
+    {{#if loggedIn}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
