--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -6,7 +6,7 @@
         <form>
              <div class="mb-3">
                 <label for="usernameInput" class="form-label">Username</label>
-                <input type="username" class="form-control" id="usernameInput">
+                <input type="username" class="form-control" id="signup-username">
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
