--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -1,24 +1,24 @@
-<div class="d-flex justify-content-center align-items-center vh-100">
+<div class="d-flex justify-content-center align-items-center">
   <div class="container">
-    <div class="card">
+    <div class="card" style="height: fit-content">
       <div class="form-group m-3">
         <label for="recipe-title-add" class="form-label custom-label">Recipe Title:</label>
-        <input type="text" class="form-control" id="recipe-title-add" placeholder="">
+        <input type="text" class="form-control" id="title-add" placeholder="">
       </div>
       <div class="form-group m-3">
         <label for="recipe-ingredients-add" class="form-label custom-label">Ingredients</label>
-        <textarea class="form-control" placeholder="" id="recipe-ingredients-add" style="height: 200px"></textarea>
+        <textarea class="form-control" placeholder="" id="ingredients-add" style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
         <label for="recipe-directions-add" class="form-label custom-label">Directions:</label>
-        <textarea class="form-control" placeholder="" id="recipe-directions-add" style="height: 200px"></textarea>
+        <textarea class="form-control" placeholder="" id="directions-add" style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
         <label for="cooktime-add" class="form-label custom-label">Cook Time: </label>
         <textarea class="form-control" placeholder="" id="cooktime-add" style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
-        <label for="comments-add" class="form-label custom-label">Notes:  </label>
+        <label for="comments-add" class="form-label custom-label">Comments:  </label>
         <textarea class="form-control" placeholder="" id="comments-add" style="height: 200px"></textarea>
       </div>
       <button class="btn btn-primary mb-3 mx-3" id="create-recipe" style="width:min-content; padding: .75rem;"
