added minor styling and code for updating and deleting recipes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
     <form>
       <div class="card-body">
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <label for="exampleInputEmail1" class="form-label">Email Address</label>
           <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
@@ -18,3 +18,5 @@
     </form>
   </div>
 </div>
+
+<script src="/js/login.js"></script>
