--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <div class="d-flex">
-    <div class="bg-secondary bg-gradient p-2 vw-100 d-flex justify-content-between">
+    <div class="bg-secondary bg-gradient p-2 vw-100 d-flex justify-content-between" style="border-radius: 10px;">
         <h3 class="ms-4 align-self-center">Dashboard</h3>
         <a href="/dashboard/addrecipe" type="button" class="btn btn-primary me-4 mt-2 mb-2">Create Recipe!</a>
     </div>
