--- a/views/partials/recipeCard.handlebars
+++ b/views/partials/recipeCard.handlebars
@@ -20,6 +20,7 @@
         <p class="card-text">Comments: {{comments}}</p>
         {{/if}}
     </div>
-    <a href="/dashboard/updaterecipe/{{id}}" class="edit-recipe-btns btn btn-primary mb-3 mx-3" id="edit-recipe-btn"
-        style="width: 30%; padding: 3px;" type="submit">Edit Recipe</a>
+    <div class="border-top pt-3 px-3">
+        <a href="/dashboard/updaterecipe/{{id}}" class="edit-recipe-btns btn btn-primary d-block w-100 mb-3 mx-auto" id="edit-recipe-btn" type="submit">Edit Recipe</a>
+    </div>
 </div>
