added code to change navbar functionality as discussed in group

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="/recipeBook">Recipe Book</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="dashboard-btn" href="/dashboard">Dashboard</a>
+                        <a class="nav-link" id="dashboard-btn" href="/addrecipe">Add Recipe</a>
                     </li>
                     {{#if loggedIn}}
                     <li class="nav-item">
