--- a/views/partials/recipeCard.handlebars
+++ b/views/partials/recipeCard.handlebars
@@ -21,6 +21,6 @@
         {{/if}}
     </div>
     <div class="border-top pt-3 px-3">
-        <a href="/dashboard/updaterecipe/{{id}}" class="edit-recipe-btns btn btn-primary d-block w-100 mb-3 mx-auto" id="edit-recipe-btn" type="submit">Edit Recipe</a>
+        <a href="/updaterecipe/{{id}}" class="edit-recipe-btns btn btn-primary d-block w-100 mb-3 mx-auto" id="edit-recipe-btn" type="submit">Edit Recipe</a>
     </div>
 </div>
