small fix to the footer

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,12 +34,16 @@ footer {
     color: #045f22;
     padding: 20px 0;
     text-align: center;
-    position: fixed;
+
     bottom: 0;
     width: 100%;
+    position: fixed;
+    height: 15px;
+    line-height:11px;
 }
 
 .footer p {
+   
     margin-bottom: 0;
 }
 
