--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -21,7 +21,7 @@
         <label for="comments-add" class="form-label custom-label">Comments:  </label>
         <textarea class="form-control" placeholder="Enter comments if any..." id="comments-add" style="height: 200px"></textarea>
       </div>
-      <button class="btn btn-primary mb-3 mx-3" id="create-recipe" style="width:min-content; padding: .75rem;"
+      <button class="btn btn-success mb-3 mx-3" id="create-recipe" style="width:min-content; padding: .75rem;"
         type="submit">Create</button>
     </div>
   </div>
