--- a/views/searchRecipeCard.handlebars
+++ b/views/searchRecipeCard.handlebars
@@ -67,7 +67,7 @@
             {{/if}}
         </div>
         <div class="border-top pt-3 px-3">
-            <a href="/updaterecipe/{{recipe.id}}" class="edit-recipe-btns btn btn-primary d-block w-100 mb-3 mx-auto"
+            <a href="/updaterecipe/{{recipe.id}}" class="edit-recipe-btns btn btn-success d-block w-100 mb-3 mx-auto"
                 id="edit-recipe-btn" type="submit">Edit Recipe</a>
         </div>
     </div>
