--- a/views/updateRecipe.handlebars
+++ b/views/updateRecipe.handlebars
@@ -22,9 +22,9 @@
         <textarea class="form-control" placeholder="Enter comments if any..." id="comments-update" style="height: 200px">{{recipe.comments}}</textarea>
       </div>
       <div class="d-flex justify-content-around border-top pt-3">
-         <button class="btn btn-primary mb-3 mx-5" id="update-recipe" style="width:fit-content; padding: .75rem;"
+         <button class="btn btn-success mb-3 mx-5" id="update-recipe" style="width:fit-content; padding: .75rem;"
         type="submit">Update Recipe</button>
-         <button class="delete-recipe-btns btn btn-primary mb-3 mx-5" id="delete-recipe-btn"
+         <button class="delete-recipe-btns btn btn-success mb-3 mx-5" id="delete-recipe-btn"
         style="width: fit-content; padding: 3px 5px 3px 5px;" type="submit">Delete Recipe</button>
       </div>
      
