added some missing validation

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -16,6 +16,7 @@
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
                     <input type="password" class="form-control" id="signup-password">
+                    <small class="form-text text-muted">Password must be at least 6 characters long.</small>
                 </div>
                 <button type="submit" class="btn btn-outline-success" id="submit-signup-btn">Submit</button>
             </div>
@@ -24,3 +25,4 @@
 </div>
 
 <script src="/js/signup.js"></script>
+
