added some stylingto make font more readable

--- a/views/recipeBook.handlebars
+++ b/views/recipeBook.handlebars
@@ -5,7 +5,7 @@
 <div>
     {{#if recipes}}
     <div>
-        <h2>Search My Recipes</h2>
+        <h2 style="color: white; text-shadow: 2px 2px 4px #000000;">Search My Recipes</h2>
         <input type="text" name="search-recipes" id="search-recipes" placeholder="search recipes by recipe name..."
             class="form-control litanswer mb-2 mt-3">
         <input class="btn btn-success mb-5" type="submit" id="search-recipes-btn" value="Search">
