--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,15 +2,15 @@
     <div class="container">
         <div class="row pt-4">
             <div class="col-md-5">
-                <h2 class="mb-4 mt-4">Welcome!</h2>
+                <h2 class="mb-4 mt-4" style="color: white; text-shadow: 2px 2px 4px #000000;">Welcome!</h2>
                 {{#if loggedIn}}
-                <h5>To view your saved recipies, click on "Recipe Book" in the navbar. Click the name of the desired recipe
+                <h5 style="color: white; text-shadow: 2px 2px 4px #000000;">To view your saved recipies, click on "Recipe Book" in the navbar. Click the name of the desired recipe
                     or use the search bar. Once you are viewing your desired recipe, you can click on the edit button to
                     update or delete your recipe. To create a new recipe, click on "Add Recipe" in the navbar
                     and add it to your book!
                 </h5>
                 {{else}}
-                <h5>To enjoy please login or sign-up</h5>
+                <h5 style="color: white; text-shadow: 2px 2px 4px #000000;">To enjoy please login or sign-up</h5>
                 <div class="row pt-3 d-flex justify-content-center">
                     <div class="col-md-6 my-3">
 
