fixed bug for signup, finished some styling

--- a/views/searchRecipeCard.handlebars
+++ b/views/searchRecipeCard.handlebars
@@ -1,5 +1,4 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
     body {
         font-family: Arial, sans-serif;
         background-color: #f8f9fa;
@@ -16,8 +15,7 @@
     }
 
     .card-title {
-        font-family: 'Bubblegum Sans', cursive;
-        background-color: #609460;
+        background-color: #006400;
         color: white;
         font-size: 32px;
         font-weight: bold;
@@ -67,7 +65,7 @@
             {{/if}}
         </div>
         <div class="border-top pt-3 px-3">
-            <a href="/updaterecipe/{{recipe.id}}" class="edit-recipe-btns btn btn-success d-block w-100 mb-3 mx-auto"
+            <a href="/updaterecipe/{{recipe.id}}" class="edit-recipe-btns btn btn-outline-success d-block w-100 mb-3 mx-auto"
                 id="edit-recipe-btn" type="submit">Edit Recipe</a>
         </div>
     </div>
