--- a/views/updateRecipe.handlebars
+++ b/views/updateRecipe.handlebars
@@ -24,7 +24,7 @@
       <div class="d-flex justify-content-around border-top pt-3">
          <button class="btn btn-success mb-3 mx-5" id="update-recipe" style="width:fit-content; padding: .75rem;"
         type="submit">Update Recipe</button>
-         <button class="delete-recipe-btns btn btn-success mb-3 mx-5" id="delete-recipe-btn"
+         <button class="delete-recipe-btns btn btn-danger mb-3 mx-5" id="delete-recipe-btn"
         style="width: fit-content; padding: 3px 5px 3px 5px;" type="submit">Delete Recipe</button>
       </div>
      
