--- a/views/recipeBook.handlebars
+++ b/views/recipeBook.handlebars
@@ -47,9 +47,9 @@
     </div>
     {{else}}
     <div class="p-2">
-        <h2 class="ms-4 mt-5 mb-4">You Don't Have Any Recipes Yet!</h2>
-        <h5 class="ms-4">Click on Add Recipe to create some new</h5>
-        <h5 class="ms-4">recipes and start your recipe book.</h5>
+        <h2 class="ms-4 mt-5 mb-4" style="color: white; text-shadow: 2px 2px 4px #000000;">You Don't Have Any Recipes Yet!</h2>
+        <h5 class="ms-4" style="color: white; text-shadow: 2px 2px 4px #000000;">Click on Add Recipe to create some new</h5>
+        <h5 class="ms-4" style="color: white; text-shadow: 2px 2px 4px #000000;">recipes and start your recipe book.</h5>
         <a href="/addrecipe" class="btn btn-success my-3 ms-4" id="create-recipe" style="width:fit-content; padding: auto;"
             type="submit">Add Recipe</a>
     </div>
