--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -7,19 +7,29 @@
       </div>
       <div class="form-group m-3">
         <label for="recipe-ingredients-add" class="form-label custom-label">Ingredients</label>
-        <textarea class="form-control" placeholder="Separate ingredients with comma (ex. 1 cup sugar, 2 cups flour, etc.)" id="ingredients-add" style="height: 200px"></textarea>
+        <textarea class="form-control"
+          placeholder="Separate ingredients with comma (ex. 1 cup sugar, 2 cups flour, etc.)" id="ingredients-add"
+          style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
         <label for="recipe-directions-add" class="form-label custom-label">Directions:</label>
-        <textarea class="form-control" placeholder="Write directions in paragraph form (ex. preheat oven to 360 degrees. Combine dry ingredients...)" id="directions-add" style="height: 200px"></textarea>
+        <textarea class="form-control"
+          placeholder="Write directions in paragraph form (ex. preheat oven to 360 degrees. Combine dry ingredients...)"
+          id="directions-add" style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
         <label for="cooktime-add" class="form-label custom-label">Cook Time: </label>
         <textarea class="form-control" placeholder="(ex. 20 mins)" id="cooktime-add" style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
-        <label for="comments-add" class="form-label custom-label">Comments:  </label>
-        <textarea class="form-control" placeholder="Enter comments if any..." id="comments-add" style="height: 200px"></textarea>
+        <label for="comments-add" class="form-label custom-label">Comments: </label>
+        <textarea class="form-control" placeholder="Enter comments if any..." id="comments-add"
+          style="height: 200px"></textarea>
+      </div>
+      <div class="form-group m-3">
+        <label for="comments-add" class="form-label custom-label">Image URL: </label>
+        <textarea class="form-control" placeholder="Enter the URL of the recipe image..." id="image-add"
+          style="height: 50px"></textarea>
       </div>
       <button class="btn btn-success mb-3 mx-3" id="create-recipe" style="width:min-content; padding: .75rem;"
         type="submit">Create</button>
