--- a/views/searchRecipeCard.handlebars
+++ b/views/searchRecipeCard.handlebars
@@ -1,5 +1,6 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
+
     body {
         font-family: Arial, sans-serif;
         background-color: #f8f9fa;
@@ -45,8 +46,12 @@
 
 <body>
     <div class="card">
-        <div class="card-header mb-0">
-            <h2 id="recipe-title" class="card-title">{{recipe.name}}</h2>
+        <div class="card-header mb-0" style="display: flex; justify-content: center; align-items: center;">
+            <h2 id="recipe-title" class="card-title px-1" style="border-radius:5px;">{{recipe.name}}</h2>
+            {{#if recipe.image_url.length}}
+            <image src="{{recipe.image_url}}" alt="Recipe image"
+                style="height: 100px; width:auto; border: 1px solid #006400; margin-left: 10px;"></image>
+            {{/if}}
         </div>
         <div class="card-body">
             <h3 class="card-subtitle">Ingredients:</h3>
