--- a/views/updateRecipe.handlebars
+++ b/views/updateRecipe.handlebars
@@ -21,6 +21,11 @@
         <label for="comments-add" class="form-label custom-label">Comments:  </label>
         <textarea class="form-control" placeholder="Enter comments if any..." id="comments-update" style="height: 200px">{{recipe.comments}}</textarea>
       </div>
+       <div class="form-group m-3">
+        <label for="comments-add" class="form-label custom-label">Image URL: </label>
+        <textarea class="form-control" placeholder="Enter the URL of the recipe image..." id="image-update"
+          style="height: 50px">{{recipe.image_url}}</textarea>
+      </div>
       <div class="d-flex justify-content-around border-top pt-3">
          <button class="btn btn-success mb-3 mx-5" id="update-recipe" style="width:fit-content; padding: .75rem;"
         type="submit">Update Recipe</button>
