--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -6,7 +6,7 @@
         <input type="text" class="form-control" id="title-add" placeholder="Add recipe name">
       </div>
       <div class="form-group m-3">
-        <label for="recipe-ingredients-add" class="form-label custom-label">Ingredients</label>
+        <label for="recipe-ingredients-add" class="form-label custom-label">Ingredients:</label>
         <textarea class="form-control"
           placeholder="Separate ingredients with comma (ex. 1 cup sugar, 2 cups flour, etc.)" id="ingredients-add"
           style="height: 200px"></textarea>
@@ -28,7 +28,7 @@
       </div>
       <div class="form-group m-3">
         <label for="comments-add" class="form-label custom-label">Image URL: </label>
-        <textarea class="form-control" placeholder="Enter the URL of the recipe image..." id="image-add"
+        <textarea class="form-control" placeholder="If desired/available, enter the URL of the recipe image..." id="image-add"
           style="height: 50px"></textarea>
       </div>
       <button class="btn btn-success mb-3 mx-3" id="create-recipe" style="width:min-content; padding: .75rem;"
