fixed bug when adding recipe with url

--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -27,7 +27,7 @@
           style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
-        <label for="comments-add" class="form-label custom-label">Image URL: </label>
+        <label for="image-add" class="form-label custom-label">Image URL: </label>
         <textarea class="form-control" placeholder="If desired/available, enter the URL of the recipe image..." id="image-add"
           style="height: 50px"></textarea>
       </div>
