changed helper function for cleaner use

--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -8,7 +8,7 @@
       <div class="form-group m-3">
         <label for="recipe-ingredients-add" class="form-label custom-label">Ingredients:</label>
         <textarea class="form-control"
-          placeholder="Separate ingredients with comma (ex. 1 cup sugar, 2 cups flour, etc.)" id="ingredients-add"
+          placeholder="Separate ingredients with line break..." id="ingredients-add"
           style="height: 200px"></textarea>
       </div>
       <div class="form-group m-3">
